--- a/css/grid.css
+++ b/css/grid.css
@@ -11,16 +11,6 @@
   }
 }
 
-.headergrid {
-  display: grid;
-  grid-template-rows: auto 50px auto;
-  grid-template-columns: 100px auto auto auto 100px;
-  grid-template-areas: ". logo nav nav nav ."
-                       ". Title Title dog dog ."
-                       ". Tag Tag dog dog .";
-  grid-gap: 10px;
-  padding: 80px;
-}
 .logo {
   grid-column: 2;
   grid-row: 1;
@@ -41,9 +31,33 @@
 }
 .dog {
   grid-area: dog;
-  width: 150%;
+  width: 30em;
+}
+.headergrid {
+  display: grid;
+  grid-template-rows: auto 50px auto;
+  grid-template-columns: 10em auto auto auto 10em;
+  grid-template-rows: 33.3% 33.3% 33.3%;
+  grid-template-areas: ". logo nav nav nav ."
+                       ". Title Title dog dog ."
+                       ". Tag Tag . . .";
+  grid-gap: 10px;
+  padding: 3em;
+  height: 50vh;
 }
 
+
+.heading { grid-area: heading;}
+.paragraph { grid-area: content;}
+.locations { grid-area: locations;}
+.times { grid-area: times;}
+.heading2 { grid-area: title;}
+.sitting { grid-area: sitting;}
+.sittingprice { grid-area: sittingprice;}
+.smallpet { grid-area: visits;}
+.smallpetprice { grid-area: visitsprice;}
+.overnight { grid-area: overnight;}
+.lastpar { grid-area: content2;}
 .grid {
   display: grid;
   grid-template-areas: "heading ."
@@ -57,41 +71,4 @@
   grid-template-columns: 50% 50%;
   width: 80%;
   margin: 0 auto;
-}
-.heading {
-  grid-area: heading;
-}
-.paragraph {
-  grid-area: content;
-}
-.locations {
-  grid-area: locations;
-}
-.times {
-  grid-area: times;
-}
-.heading2 {
-  grid-area: title;
-}
-.sitting {
-  grid-area: sitting;
-}
-.sittingprice {
-  grid-area: sittingprice;
-}
-.smallpet {
-  grid-area: visits;
-}
-.smallpetprice {
-  grid-area: visitsprice;
-}
-.overnight {
-  grid-area: overnight;
-}
-.lastpar {
-  grid-area: content2;
-}
-
-#lightwaves {
-
 }
