--- a/css/grid.css
+++ b/css/grid.css
@@ -76,7 +76,13 @@ footer {
     background: black;
     color: white;
 }
-
+.aboutpage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 75%;
+}
 
 
 
