--- a/css/grid.css
+++ b/css/grid.css
@@ -83,7 +83,13 @@ footer {
   flex-wrap: wrap;
   width: 75%;
 }
-
+.teampage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 75%;
+}
 
 
 
