--- a/css/grid.css
+++ b/css/grid.css
@@ -76,20 +76,14 @@ footer {
     background: black;
     color: white;
 }
-.aboutpage {
+.flex {
   display: flex;
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
   width: 75%;
-}
-.teampage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 75%;
-}
+} 
+
 
 
 
