--- a/css/styles.css
+++ b/css/styles.css
@@ -484,10 +484,10 @@ form {
 }
 
 #img6 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal6.jpeg);
+  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal6.jpg);
 }
 #img6:hover {
-  background-image: linear-gradient(#00000000,#00000000), url(../img//gallery/gal6.jpeg);
+  background-image: linear-gradient(#00000000,#00000000), url(../img//gallery/gal6.jpg);
 }
 
 #img7 {
