--- a/css/styles.css
+++ b/css/styles.css
@@ -234,34 +234,34 @@ aside h3::after {
 }
 
 .sitting {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/lab1.jpg);
+  background-image:  url(../img/lab1.jpg);
 }
 .visits {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/walk2.jpg);
+  background-image:  url(../img/walk2.jpg);
 }
 .overnight {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/sit.jpg);
+  background-image:  url(../img/sit.jpg);
 }
 .lori {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/cava.jpg);
+  background-image:  url(../img/cava.jpg);
 }
 .gary {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/fetch.jpg);
+  background-image:  url(../img/fetch.jpg);
 }
 .rebecca {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/shepherd.jpg);
+  background-image:  url(../img/shepherd.jpg);
 }
 .joanna {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/pupwater.jpg);
+  background-image:  url(../img/pupwater.jpg);
 }
 .walking {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/forestdog.jpg);
+  background-image:  url(../img/forestdog.jpg);
 }
 .house {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/shake.jpg);
+  background-image:  url(../img/shake.jpg);
 }
 .daycare {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/4dog.jpg);
+  background-image:  url(../img/4dog.jpg);
 }
 .quote {
   position: absolute !important;
@@ -450,49 +450,49 @@ form {
 }
 
 #img1 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal1.jpeg);
+  background-image: url(../img/gallery/gal1.jpeg);
 }
 
 #img2 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal2.jpg);
+  background-image: url(../img/gallery/gal2.jpg);
 }
 
 #img3 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal3.jpeg);
+  background-image: url(../img/gallery/gal3.jpeg);
 }
 
 #img4 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal4.jpeg);
+  background-image: url(../img/gallery/gal4.jpeg);
 }
 
 #img5 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal5.jpg);
+  background-image: url(../img/gallery/gal5.jpg);
 }
 
 #img6 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal6.jpg);
+  background-image: url(../img/gallery/gal6.jpg);
 }
 
 #img7 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal7.jpeg);
+  background-image: url(../img/gallery/gal7.jpeg);
 }
 
 #img8 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal8.jpeg);
+  background-image: url(../img/gallery/gal8.jpeg);
 }
 
 #img9 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal9.jpeg);
+  background-image: url(../img/gallery/gal9.jpeg);
 }
 
 #img10 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal10.jpeg);
+  background-image: url(../img/gallery/gal10.jpeg);
 }
 
 #img11 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal11.jpeg);
+  background-image: url(../img/gallery/gal11.jpeg);
 }
 
 #img12 {
-  background-image: linear-gradient(#00000080,#00000080), url(../img/gallery/gal12.jpeg);
+  background-image: url(../img/gallery/gal12.jpeg);
 }
