--- a/css/grid.css
+++ b/css/grid.css
@@ -76,6 +76,13 @@ footer {
     background: black;
     color: white;
 }
+.teamsection {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  width: 80%;
+}
 .flex {
   display: flex;
   flex-direction: column;
