--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ nav a:hover {
 }
 .adddog {
   transition: all 0.3s ease-in-out;
-  width: 65%;
+  width: 30vw;
   margin: auto 0;
 }
 .adddog:hover {
