--- a/css/grid.css
+++ b/css/grid.css
@@ -1,109 +1,110 @@
-@media only screen and (max-width: 500px)  {
+@media only screen and (max-width: 900px)  {
   .headergrid{
     display: grid;
-    grid-template-area: ". . logo . nav"
-                        ". head head head ."
-                        ". tag tag tag ";
+    grid-template-area: ". logo nav"
+                        "head head head"
+                        "tag tag tag ";
 
   }
-  .dog {
+  .adddog {
     display:none;
   }
 }
-article {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.index1{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-}
- nav { grid-area: nav; }
-.logo { grid-area: logo;}
-.headtitle {grid-area: title;}
-.headtag {grid-area: tag;}
-.adddog {grid-area: dog;}
-.call {grid-area: call;}
-.headgrid {
-  display: grid;
-  grid-template-columns: 10% 45% 25% 20%;
-  grid-template-areas: "logo nav nav call"
-                        "title title dog dog"
-                        "tag tag dog dog";
-  grid-gap: 1em;
-  padding: 3em;
-  margin: 0 auto;
-  width: 80%;
-}
-
-.indextitle {grid-area: title;}
-.indextext {grid-area: text;}
-.locations {grid-area: loc;}
-.opentime {grid-area: times;}
-.index1grid {
-  display: grid;
-  grid-template-columns: 74% 25%;
-  grid-template-areas:
-    "title title"
-    "text loc"
-    "text times";
-  grid-gap: 1em;
-  padding: 0em 3em 3em 3em;
-  width: 90em;
-}
-
-.index2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.left {grid-area: left;}
-.footerlogo {grid-area: mid;}
-.right {grid-area: right;}
-footer {
-  display: grid;
-  grid-template-columns: 33.3%;
-  grid-template-areas:
-    "left mid right";
+@media only screen and (min-width: 901px) {
+  article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .index1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+   nav { grid-area: nav; }
+  .logo { grid-area: logo;}
+  .headtitle {grid-area: title;}
+  .headtag {grid-area: tag;}
+  .adddog {grid-area: dog;}
+  .call {grid-area: call;}
+  .headgrid {
+    display: grid;
+    grid-template-columns: 10% 45% 25% 20%;
+    grid-template-areas: "logo nav nav call"
+                          "title title dog dog"
+                          "tag tag dog dog";
     grid-gap: 1em;
-    width: 100%;
-    background: black;
-    color: white;
-}
-.teamsection {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  width: 80%;
-}
-.flex {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  width: 75%;
-}
-.manc {grid-area: Manc;}
-.macc {grid-area: Macc;}
-.southport {grid-area: South;}
-.warrington {grid-area: Warr;}
-.locgrid {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-areas: "Manc Macc" "South Warr";
-  grid-gap: 4em;
-  width: 100%
-}
+    padding: 3em;
+    margin: 0 auto;
+    width: 80%;
+  }
+
+  .indextitle {grid-area: title;}
+  .indextext {grid-area: text;}
+  .locations {grid-area: loc;}
+  .opentime {grid-area: times;}
+  .index1grid {
+    display: grid;
+    grid-template-columns: 74% 25%;
+    grid-template-areas:
+      "title title"
+      "text loc"
+      "text times";
+    grid-gap: 1em;
+    padding: 0em 3em 3em 3em;
+    width: 90em;
+  }
+
+  .index2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .left {grid-area: left;}
+  .footerlogo {grid-area: mid;}
+  .right {grid-area: right;}
+  footer {
+    display: grid;
+    grid-template-columns: 33.3%;
+    grid-template-areas:
+      "left mid right";
+      grid-gap: 1em;
+      width: 100%;
+      background: black;
+      color: white;
+  }
+  .teamsection {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 80%;
+  }
+  .flex {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 75%;
+  }
+  .manc {grid-area: Manc;}
+  .macc {grid-area: Macc;}
+  .southport {grid-area: South;}
+  .warrington {grid-area: Warr;}
+  .locgrid {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-areas: "Manc Macc" "South Warr";
+    grid-gap: 4em;
+    width: 100%
+  }
 
 
-
+}
 
 
 /* .logo {
