--- a/css/styles.css
+++ b/css/styles.css
@@ -117,7 +117,7 @@ header {
 p {
   font-family: 'Raleway', sans-serif;
   font-size: 16pt;
-  text-align: justify;
+  text-align: left;
   line-height: 1.5;
 }
 header h1{
@@ -144,7 +144,7 @@ section aside {
   background: #EB7859B3;
   width: 94%;
   padding-left: 6%;
-  font-size: 15pt
+  font-size: 14pt
 }
 section aside h3 {
   color: #FFFFFF;
