--- a/css/grid.css
+++ b/css/grid.css
@@ -1,4 +1,11 @@
 @media only screen and (max-width: 900px)  {
+  .flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 75%;
+  }
   .sidenav {
     height: 100%;
     width: 0%;
