Hidden mobile nav on desktop view

--- a/css/grid.css
+++ b/css/grid.css
@@ -184,6 +184,7 @@
     align-items: center;
     flex-wrap: wrap;
   }
+  .sidenav {display:none;}
   .desk-nav { grid-area: nav; }
   .mob-nav { display: none;}
   .logo { grid-area: logo;}
