--- a/css/styles.css
+++ b/css/styles.css
@@ -264,13 +264,13 @@ aside h3::after {
   background-image:  url(../img/pupwater.jpg);
 }
 .walking {
-  background-image:  url(../img/forestdog.jpg);
+  background-image: linear-gradient(#00000080, #00000080), url(../img/forestdog.jpg);
 }
 .house {
-  background-image:  url(../img/shake.jpg);
+  background-image: linear-gradient(#00000080, #00000080), url(../img/shake.jpg);
 }
 .daycare {
-  background-image:  url(../img/4dog.jpg);
+  background-image: linear-gradient(#00000080, #00000080), url(../img/4dog.jpg);
 }
 .quote {
   position: absolute !important;
