--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,13 @@ aside h3::after {
   height: 2em;
   margin-right: 1em;
 }
+.day {
+  font-weight: bolder;
+}
+.hour {
+  list-style-type: none;
+  margin-left: 1.5em;
+}
 .offers {
   height: 25em;
   width: 90em;
